{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 100,
  "lineage": "c4411a17-52d9-eca0-16b8-70a878b2c663",
  "resources": [
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-0a04040bf526d0ca4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a04040bf526d0ca4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "465676350109",
            "subnet_ids": [
              "subnet-00dc27d2375679dd8",
              "subnet-043a182eba917dbad"
            ],
            "tags": {},
            "vpc_id": "vpc-01712ccd26f1a5d6a"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-067ab358e00d003eb",
            "id": "rtb-067ab358e00d003eb",
            "owner_id": "465676350109",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "default"
            },
            "vpc_id": "vpc-01712ccd26f1a5d6a"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_public_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a887e401f7654935",
            "arn": "arn:aws:ec2:us-east-1:465676350109:instance/i-06436c086ddcb2c2a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06436c086ddcb2c2a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "monitoring": false,
            "primary_network_interface_id": "eni-060d3d6e9c33463cd",
            "private_dns": "ip-10-0-1-191.ec2.internal",
            "private_ip": "10.0.1.191",
            "public_ip": "54.234.73.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00614970d237030a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043a182eba917dbad",
            "tags": {
              "Name": "main"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0258e17f0be74f4c3"
            ]
          },
          "dependencies": [
            "module.dev_public_ec2.aws_key_pair.keypair",
            "module.dev_vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0626197a092df46c7",
            "owner_id": "465676350109",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-01712ccd26f1a5d6a"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b91e0935bf41ed99",
            "owner_id": "465676350109",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0626197a092df46c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom"
            },
            "vpc_id": "vpc-01712ccd26f1a5d6a"
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.igw",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_to_default_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b70a24cebf0d4c68",
            "route_table_id": "rtb-067ab358e00d003eb",
            "subnet_id": "subnet-00dc27d2375679dd8"
          },
          "dependencies": [
            "module.dev_vpc.aws_default_route_table.default_route_table",
            "module.dev_vpc.aws_subnet.private",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_to_custom_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0133227c174becb31",
            "route_table_id": "rtb-0b91e0935bf41ed99",
            "subnet_id": "subnet-043a182eba917dbad"
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.igw",
            "module.dev_vpc.aws_route_table.custom_route_table",
            "module.dev_vpc.aws_subnet.public",
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465676350109:subnet/subnet-00dc27d2375679dd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00dc27d2375679dd8",
            "map_public_ip_on_launch": false,
            "owner_id": "465676350109",
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-01712ccd26f1a5d6a"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465676350109:subnet/subnet-043a182eba917dbad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-043a182eba917dbad",
            "map_public_ip_on_launch": false,
            "owner_id": "465676350109",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-01712ccd26f1a5d6a"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:465676350109:vpc/vpc-01712ccd26f1a5d6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a04040bf526d0ca4",
            "default_route_table_id": "rtb-067ab358e00d003eb",
            "default_security_group_id": "sg-0258e17f0be74f4c3",
            "dhcp_options_id": "dopt-b9baefc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01712ccd26f1a5d6a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-067ab358e00d003eb",
            "owner_id": "465676350109",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}